--- a/PeerInfo.cfg
+++ b/PeerInfo.cfg
@@ -1,3 +1,4 @@
 1001 lin114-00.cise.ufl.edu 6008 1
 1002 lin114-01.cise.ufl.edu 6008 0
 1003 lin114-02.cise.ufl.edu 6008 0
+1004 lin114-05.cise.ufl.edu 6008 0
